
2023-07-07  Simon Sobisch <simonsobisch@gnu.org>

	common preparser cleanup
	* ppparse.y: error recovery for COPY and REPLACE (consume until DOT
	  instead of until EOF)
	* ppparse.y: renamed "TOKEN" from "Identifier" to "Word", adjust
	  some terminals prefixing it with leading underscore as optional
	Bug #890 wrong reference in COPY diagnostic
	* ppparse.y: switch to new buffer after parsing DOT, not before
	Bug #23 several replacement values create parser errors
	* pplex.l: split REPLACE_STATE and REPLACING_STATE from COPY_STATE
	  to limit their reserved word list to the applicable ones and to
	  improve error handling
	* ppparse.y: explicit parse IN and OF as single replacement words

2023-07-06  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* replace.c: rewrite the code for preprocessing with a two-phase
	  algorithm. The first phase performs COPY REPLACING on the stream
	  of tokens, while the second phase perform REPLACE on the resulting
	  stream of tokens. This rewriting is closer to the COBOL standard
	  and fixes bug #831 partially.
	* cobc.c: flag -P now accepts - as argument to mean stdout

2023-07-05  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* flag.def/cobc.c: new flags -fno-ttimestamp to suppress timestamp
	  in listing headers, and -fttitle=<TITLE>, so that listings can be
	  compared accross different versions and dates. This patch partially
	  implements feature-request #294.
	  Replace numeric constants in flags and switch by a constant macro
	  CB_FLAG_GETOPT_. Remove unused 'case 6:' for -fdefaultbyte that is
	  now handled in config.c

2023-07-02  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* pplex.l (ppecho, ppecho_direct): replace alt_space by passing a
	  second equivalent token
	* pplex.l, replace.c: move the preprocessing code performing
	  COPY REPLACING and REPLACE from pplex.l to replace.c

2023-07-04  Simon Sobisch <simonsobisch@gnu.org>
